--- a/bio.html
+++ b/bio.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <!-- CSS SWIPEBOX -->
-  <link rel="stylesheet" href="Assets/swipebox-master/src/css/swipebox.css">
   <!-- CSS -->
   <link rel="stylesheet" href="Assets/css/style.css">
   <!--GOOGLE FONTS -->
@@ -37,6 +35,7 @@
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="proyectos.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="comentarios.html">Comentarios</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div> <!--Cierre container fluid-->
